# brick-reproduce

./: brick-reproduce.cabal  stack.yaml
src/: Main.hs
